# colBarLib

./: readme.md  setup.cfg  show_colbars.ipynb
colbarlib/: __init__.py  autumn.py  example.py
colbarlib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cmap_test.py
