[metadata]
name = colbarlib
version = attr: colbarlib.__version__
author = Jakub Dokulil
author_email = jakub.dokulil@imp.ac.at
description = Tools for packages
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    matplotlib > 3.8.0
